# nova-tehnical

./: .gitignore  README.md  Seascape.bat  Walk.bat
nova-py/: .flake8  Makefile  README.md  pyproject.toml
nova-py/src/nova_py/: __main__.py  audio.py  image.py  processing.py  scenario.py  utils.py
nova-py/src/nova_py/audio/: controller.py  pipeclient.py
nova-py/src/nova_py/cli/: args.py
nova-py/src/nova_py/visual/: image.py  processing.py
