[tool.poetry]
name = "nova-py"
version = "0.1.0"
description = ""
authors = ["Andrei <andrei.vacaru@runtimeverification.com>"]
readme = "README.md"
packages = [{include = "src/nova_py"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
flake8 = "*"
isort = "*"
autoflake = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
