[tool.poetry]
name = "nova-py"
version = "0.1.0"
description = ""
authors = ["Andrei <andrei96v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.5"
pillow = "^10.0.0"
pillow-heif = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
flake8 = "*"
isort = "*"
autoflake = "*"
flake8-quotes = "*"
types-psutil = "*"

[tool.poetry.scripts]
nova = "nova_py.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
